# aitherflow

./: .gitignore  .mcp.json  ARCHITECTURE.md  AUDIT-2026-03-10.md  CLAUDE.md  Cargo.toml  DOCS.md  LICENSE  README-brule.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: plan.md
.github/workflows/: ci.yml  release.yml
devlog/: 2026-02-27_001.md
docs/: audit-2026-03-07.md  audit-2026-03-08-external.md  audit-summary.md  by-design.md
docs/2026-03-07/: audit-2026-03-07.md
docs/2026-03-08/: AITHEFLOW-frontend-rules-2026-03-08.md  aitheflow-backend-2026-03-08.md
docs/audit 2026-03-08/: AITHEFLOW-frontend-rules-2026-03-08.md  aitheflow-backend-2026-03-08.md
mcp-image-gen/: Cargo.toml
mcp-image-gen/src/: config.rs  main.rs  mcp.rs  tools.rs
mcp-image-gen/tests/: integration.rs
scripts/: build-sidecar.sh  self-build.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/crates/aither-flow-perms/: Cargo.toml
src-tauri/crates/aither-flow-perms/src/: main.rs
src-tauri/crates/memory-mcp/: Cargo.toml
src-tauri/crates/memory-mcp/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  attachments.rs  chats.rs  claude_md.rs  config.rs  devtools.rs  file_ops.rs  file_watcher.rs  files.rs  hooks.rs  image_download.rs  image_gen.rs  lib.rs  main.rs  mcp.rs  mcp_transport.rs  named_mutex_pool.rs  platform.rs  plugins.rs  projects.rs  secrets.rs  settings.rs  skills.rs  telegram.rs  translations.rs  voice.rs  workspace.rs  worktree.rs
src-tauri/src/conductor/: message.rs  mod.rs  parser.rs  process.rs  resolve.rs  session.rs  stats.rs  types.rs
src-tauri/src/external_models/: client.rs  config.rs  mcp_server.rs  mod.rs  types.rs  vision.rs
src-tauri/src/memory/: db.rs  indexer.rs  mod.rs
src-tauri/src/plugins/: commands.rs  marketplace.rs  mod.rs  types.rs
src-tauri/src/rag/: chunker.rs  commands.rs  config.rs  context.rs  embedder.rs  index.rs  mcp_server.rs  mod.rs  ocr.rs  parser.rs  rag_settings.rs  store.rs  web.rs  youtube.rs
src-tauri/src/scheduler/: commands.rs  mod.rs  runner.rs
src-tauri/src/teamwork/: mailbox.rs  mcp_server.rs  mod.rs  presets.rs  roles.rs  tasks.rs  team.rs
src-tauri/src/telegram/: api.rs  bot.rs  commands.rs  handlers.rs  mod.rs  state.rs  types.rs
src-tauri/src/voice/: capture.rs  groq.rs  mod.rs  recording.rs  streaming.rs
src-tauri/src/web_server/: auth.rs  handlers.rs  mod.rs  ws.rs
src/components/: ErrorBoundary.tsx  Modal.tsx
src/data/: commandDescriptions.ts
src/hooks/: useClickOutside.ts  useDragReorder.ts  useExternalModelsSettings.ts  useFileAttach.ts  useFileEntryClick.ts  useHotkeys.ts  useImageGenSettings.ts  useIsMobile.ts  usePasteHandler.ts  useTauriDragDrop.ts  useTelegramBridge.ts  useVoice.ts
src/lib/: formatTime.ts  transport.ts
src/services/: telegramService.ts
src/stores/: agentStore.ts  agentSwitcher.ts  attachmentStore.ts  chatCrud.ts  chatService.ts  chatStore.ts  chatStreamHandler.ts  conductorStore.ts  fileViewerStore.ts  hotkeyStore.ts  knowledgeStore.ts  layoutStore.ts  mcpStore.ts  pluginStore.ts  projectStore.ts  schedulerListener.ts  sessionManager.ts  skillStore.ts  teamStore.ts  (+2 more)
(+182 files in other folders)
