[package]
name = "aitherflow"
version = "0.3.0"
description = "Desktop GUI for Claude Code CLI"
authors = ["aitherlab-dev"]
edition = "2021"

[lib]
name = "aitherflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
dirs = "6"
tauri-plugin-dialog = "2"
