[package]
name = "aitherflow"
version = "0.3.0"
description = "Desktop GUI for Claude Code CLI"
authors = ["aitherlab-dev"]
edition = "2021"

[lib]
name = "aitherflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
trash = "5"
notify = "7"
notify-debouncer-mini = "0.5"
rusqlite = { version = "0.34", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
rand = "0.8"
include_dir = "0.7"
subtle = "2"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
