[package]
name = "aitherflow"
version = "0.4.3"
description = "Desktop GUI for Claude Code CLI"
authors = ["aitherlab-dev"]
edition = "2021"

[lib]
name = "aitherflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "net"] }
axum = "0.7"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
trash = "5"
notify = "7"
notify-debouncer-mini = "0.5"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
chrono = "0.4"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
rubato = "0.16"
futures-util = "0.3"
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }
smallvec = "1"
sha2 = "0.10"
