[package]
name = "aither-flow-memory"
version = "0.1.0"
edition = "2021"
description = "MCP server for Aither Flow session memory"

[[bin]]
name = "aither-flow-memory"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
